# Multi-Agent-System

./: .env.example  .gitignore  README.md  pyproject.toml  run_local.sh  start_no_proxy.py  start_services.py  stop.sh  test_api.py  test_flow.py
agents/content_builder/: __init__.py  main.py  pyproject.toml
agents/judge/: __init__.py  main.py  pyproject.toml
agents/orchestrator/: __init__.py  main.py  pyproject.toml
agents/researcher/: __init__.py  main.py  pyproject.toml
app/: main.py  pyproject.toml
app/frontend/: app.js  index.html  style.css
shared/: __init__.py  config.py  llm.py  models.py
