# Course Creation Multi-Agent System
# Built with LangGraph + HTTP API (simulating A2A)

[project]
name = "course-creation-agent"
version = "0.1.0"
description = "Multi-agent course creation system using LangGraph"
requires-python = ">=3.10,<3.14"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "app", "shared"]